# novel2screen

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start_backend.ps1
backend/: config.py  main.py  requirements.txt
backend/agents/: base.py  character.py  consistency.py  critic.py  dialogue.py  episode_planner.py  narrative.py  repair.py  scene_planner.py  timeline.py  world.py
backend/core/: database.py  fact_extractor.py  llm.py  memory.py  preprocessor.py  prompt_loader.py  prompts.py  router.py
backend/data/: char_bible.json  world_bible.json
backend/harness/: __init__.py  fidelity.py  novel_reader.py  orchestrator.py  output_validator.py
backend/prompts/: character.yaml  critic.yaml  dialogue.yaml  episode_planner.yaml  narrative.yaml  repair.yaml  scene_planner.yaml
backend/schemas/: models.py  validator.py
backend/workflows/: novel2screen.py
data/novels/: sample_novel.txt  最后的信号.txt
doc/: prompt.md  设计方案.md
doc/tasks/: 01-基础架构与配置.md  02-Schema数据模型与校验.md  03-小说解析与预处理.md  04-模式路由.md  05-NarrativeAgent.md  06-CharacterAgent.md  07-WorldAgent.md  08-TimelineAgent.md  09-EpisodePlanner.md  10-ScenePlanner.md  11-DialogueWriter.md  12-YAMLCompiler.md  13-CriticAgent.md  14-RepairAgent.md  15-ConsistencyAgent.md  16-提示工程.md  17-记忆系统.md  18-工作流编排.md  19-后端API.md  20-前端应用.md  21-人机协作工作流.md  22-Harness引擎.md  23-MCP服务.md  24-测试.md  25-部署与Docker.md  progress.md
docs/: architecture.md  demo-script.md  prompts.md  yaml-schema.md
frontend/: index.html
mcp-server/: server.py
(+10 files in other folders)
