[project]
name = "novel2screen"
version = "2.0.0"
description = "AI-Powered Multi-Agent System for Novel-to-Screenplay Conversion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "D107", "PLR2004", "PLR0913", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "T20"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
